2020-10-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha02: Superspreader';git push
 	git tag -a 4.9.6-alpha02 -m 'autotools libudunits2.dylib; ncremap nfr n2s rll nobnds, lat_d/lon_d, ; ncra -N';git push --tags

	* Fix grid inferral error for last interface boundary (grid_corner_lat) of N2S RLL grids without bounds

2020-10-08  Charlie Zender  <zender@uci.edu>

	* Replace old benchmark case famipc5_ne30_v0.3_00003 by 20180129.DECKv1b_piControl.ne30_oEC.edison

	* Add lat_d, lon_d, area_d, area_p, ncol_d, ncol_p to regridding database

2020-10-02  Charlie Zender  <zender@uci.edu>

	* Improve regression tests for ncra -N, mostly working

2020-10-01  Charlie Zender  <zender@uci.edu>

	* configure.ac check for UDUnits2 library in /opt/local/lib/libudunits2.dylib

	* Merge fixes from Henry to enable better regridding of	problematic input grid cells

2020-09-29  Charlie Zender  <zender@uci.edu>

	* Remove UDUnits1 documentation from nco.texi

2020-09-26  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha01: Blown Glass';git push
 	git tag -a 4.9.6-alpha01 -m 'Functionally identical to 4.9.5';git push --tags

	* ncra add NRM_BY_DNM infrastructure to implement integration capability similar to ncwa

2020-09-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.5: RBG';git push
 	git tag -a 4.9.5 -m 'intel cmp fix; ncatted prn mlt flt prms; ncclimo area_nm hrz_dmn; ncremap nsx fix RLL;';git push --tags

	* nco_def_var_filterx() prototype fix for netCDF 4.8.0 forward compatibility

2020-09-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.5-beta01: Elderflower';git push
 	git tag -a 4.9.5-beta01 -m 'nco_inq_varname() dgn; ncclimo area_nm fix; ncremap nsx fix RLL';git push --tags
